--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
       <div id="seek-bar">
         <div id="fill"></div>
         <div id="handle"></div>
+        <div id="duration"> 0:00</div>
+        <div id="total-duration"> 0:00</div>
       </div>
     </div>
   </div>
