--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 
 <head>
+  <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="style.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="jquery-3.5.0.slim.min.js"></script>
+  <script src="axios.min.js"></script>
   <script src="index.js"></script>
   <title>Oud Web Player</title>
 </head>
@@ -32,9 +33,9 @@
       </div>
 
       <div id="seek-bar">
+        <div id="duration"> 0:00</div>
         <div id="fill"></div>
         <div id="handle"></div>
-        <div id="duration"> 0:00</div>
         <div id="total-duration"> 0:00</div>
       </div>
     </div>
