--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
         <div id="total-duration"> 0:00</div>
       </div>
     </div>
+
+    <input id="logout-btn" class="btn" type="button" name="Logout" value="Logout">
   </div>
 
 </body>
